snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha256
156817191fb4e8c547231fc0c831e2a7d4984144232490bf0b7e4b356be7e21e